--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,11 @@ name = "pypi"
 django = "*"
 requests = "*"
 python-dotenv = "*"
+gunicorn = "*"
+dj-database-url = "*"
+whitenoise = "*"
+psycopg2 = "*"
+django-heroku = "*"
 
 [dev-packages]
 
